# visilake

./: .dockerignore  .envrc  .eslintrc.cjs  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.org  docker-compose.yml  flake.nix  next.config.mjs  package-lock.json  package.json  prettier.config.mjs  tailwind.config.ts  treefmt.nix  tsconfig.json
.github/workflows/: nix-build-test.yml
delete-queue-proc/: Cargo.toml  config.rs  main.rs  utils.rs
delete-queue-proc/aws/: mod.rs  sqs.rs
infra/: README.org  datalake.tf  deploy  deploy-tf.sh  deploy.ps1  deployInfra.ps1  dynamodb.tf  main.tf  private.nardo.yml  private.vpc.yml  stop  stop.ps1  stopStacks.ps1  variables.tf  vpc.tf
infra/analysisTypes/: autocorrection.json  rollingMean.json  rollingStdDeviation.json
infra/mockdata/: README.org  analysisTypes.json  requests.json  sourceTags.json  sources.json  various_types.csv
infra/useCases/: mockUseCasesBatchCommand.json
localaws/: awscdk-local.nix  awscli-local.nix
localstack/: awscli-local.nix  deploy  deploy.ps1  terraform-local.nix
nardo-proc/: 0e7144ec.csv  47a19cb6.csv  Cargo.toml  config.rs  default.nix  main.rs  test-jobID.parquet  test.txt  utils.rs
nardo-proc/analysis/: eda_analysis.py  simulated_analysis.py  ydata-config.yaml
nardo-proc/aws/: athena.rs  dynamodb.rs  mod.rs  s3.rs  sns.rs  sqs.rs
nardo-proc/models/: data.rs  job.rs  job_queue.rs  job_request.rs  job_response.rs  job_type.rs  mod.rs  status.rs
nardo-proc/outputs/: test-jobID-781-eda-1x5twaq6.html  test-jobID-781-eda-33umrc6_.html  test-jobID-781-eda-3j3kfc1m.html  test-jobID-781-eda-_3b2i072.html
nardo-proc/tasks/: delete_queue.rs  mod.rs  process.rs  queue.rs
public/: data.html
src/: env.mjs
src/clients/: athena.ts  dynamodb.ts  sns.ts  sqs.ts
src/components/: Athena.tsx  Background.tsx  Bar.tsx  Layout.tsx  Logo.tsx  Navbar.tsx  Parallelogram.tsx
src/mappers/: analysisTypeMapper.ts  jobMappers.ts  useCaseMappers.ts
src/models/: useCase.ts
src/pages/: Athena.tsx  Help.tsx  ListPage.tsx  ViewPage.tsx  index.tsx
src/server/: auth.ts
src/styles/: globals.css
src/utils/: athena.ts  date.ts  dbMockJobGenerator.js  dbMockUseCaseGenerator.js  granularity.ts  keyboardEvent.ts  mockJobGenerator.ts  mockUseCaseGenerator.ts  types.ts  useWindowResolution.ts
visiproc/: Cargo.toml  default.nix  main.rs  run  utils.rs
(+71 files in other folders)
