[package]
name = "localstack-example"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.56.1"
aws-sdk-s3 = "0.33.0"
aws-sdk-sqs = "0.33.0"
aws-sdk-dynamodb = "0.33.0"
chrono = "0.4.31"
tokio = { version = "1.20.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] } 
http = "0.2"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
maplit = "1.0.2"
