[package]
name = "delete-queue-proc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "delete-queue-proc"
path = "./main.rs"


[dependencies]
aws-config = { version= "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.15.0" }
chrono = "0.4.35"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
eyre = "0.6.12"